--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,7 @@
         "future": "cpp",
         "sstream": "cpp",
         "regex": "cpp"
-    }
+    },
+    "idf.espIdfPathWin": "C:\\ESPRESSIF\\v5.3.2\\esp-idf",
+    "idf.toolsPathWin": "C:\\ESPRESSIF\\idf_tools"
 }
