--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -2,5 +2,6 @@ targets:
   - esp32s3
 dependencies:
   espressif/arduino-esp32:
-    pre_release: false
-    version: '*'
+    version: '3.1.1'
+  espressif/esp_mqtt_cxx:
+    version: '0.4.0'
