--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,8 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "climits": "cpp"
     },
     "idf.espIdfPathWin": "C:\\ESPRESSIF\\v5.3.2\\esp-idf",
     "idf.toolsPathWin": "C:\\ESPRESSIF\\idf_tools",
